--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="#" width="154" height="62" alt="Логотип магазина «Глейси»">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О Компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="search-link">Поиск</li>  <!--  Лупа, потом скрыть стилизуя  -->
+          <li class="login-link">Вход</li>
+           <li class="basket-link">Пусто</li> <!--  Корзина, тоже стилизовать, пока так -->
+        </ul>
+      </nav>
+      <section class="phone">
+        <p class="work-time">С 10 до 20, ежедневно<br>
+        <span class="phone-number">8 812 450-25-25</span></p>
+      </section>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+
 
   </body>
 </html>
