--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                   <li class="best-item">
                     <h3>
                       <a href="catalog.html">
-                        <p class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-                        <p class="price"><b>310₽<span class="weight">/кг</span></b></p>
+                        <span class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
                       </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -71,12 +70,12 @@
                         <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                       </a>
                     </p>
+                    <p class="price"><b>310₽<span class="weight">/кг</span></b></p>
                   </li>
                     <li class="best-item">
                         <h3>
                           <a href="catalog.html">
-                            <p class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</p>
-                            <p class="price"><b>380₽<span class="weight">/кг</span></b></p>
+                            <span class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</span>
                           </a>
                         </h3>
                         <p class="catalog-item-image">
@@ -84,12 +83,12 @@
                             <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                           </a>
                         </p>
+                        <p class="price"><b>380₽<span class="weight">/кг</span></b></p>
                         </li>
                         <li class="best-item">
                             <h3>
                               <a href="catalog.html">
                                 <p class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</p>
-                                <p class="price">355₽<b><span class="weight">/кг</span></b></p>
                               </a>
                             </h3>
                             <p class="catalog-item-image">
@@ -97,12 +96,12 @@
                                 <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                               </a>
                             </p>
+                            <p class="price"><b>355₽<span class="weight">/кг</span></b></p>
                             </li>
                             <li class="best-item">
                                 <h3>
                                   <a href="catalog.html">
                                     <p class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</p>
-                                    <p class="price"><b>415₽<span class="weight">/кг</span></b></p>
                                   </a>
                                 </h3>
                                 <p class="catalog-item-image">
@@ -110,6 +109,7 @@
                                     <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                                   </a>
                                 </p>
+                                <p class="price"><b>415₽<span class="weight">/кг</span></b></p>
                                 </li>
           </ul>
         </section>
