Добавлен каталог, мелкие правки на главной
Мелкие правки на главной странице (кнопки, названия класов). Добавлена разметка каталога.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         </a>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
+          <li><a href="shipping and payment.html">Доставка и оплата</a></li>
+          <li><a href="about company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
           <li class="login-link">Вход</li>
         </ul>
-        <div class="search-link">
-          <a href="#">Поиск</a>
+        <div class="search-btn">
+          <button>Поиск</button>
         </div>
-        <div class="basket-link">
-          <a href="#">Пусто</a>
+        <div class="basket-btn">
+          <button>Пусто</button>
         </div>
       </nav>
       <section class="phone">
@@ -40,7 +40,7 @@
 
             <!-- предпологаемое место для форм слайдера -->
 
-            <a href="catalog.html" class="btn-slider">Возьми оба!</a>
+            <button class="btn-slider">Возьми оба!</button>
           </div>
         </section>
         <section class="promo">
@@ -48,12 +48,12 @@
           <div class="promo-offer raspberry-offer">
             <p class="title-offer">Малинка даром!</p>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a href="catalog.html" class="btn-offer-raspberry">Хочу варенье!</a>
+            <button class="btn-offer-raspberry">Хочу варенье!</button>
           </div>
           <div class="promo-offer chocolate-offer">
           <p class="title-offer">Шоколадки даром!</p>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a href="catalog.html" class="btn-offer-chocolate">Хочу шоколадки!</a>
+          <button class="btn-offer-chocolate">Хочу шоколадки!</button>
         </div>
         </section>
         <section class="best-sellers">
@@ -70,7 +70,7 @@
                         <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                       </a>
                     </p>
-                    <p class="price"><b>310₽<span class="weight">/кг</span></b></p>
+                    <p class="catalog-item-price"><b>310₽<span class="weight">/кг</span></b></p>
                   </li>
                     <li class="best-item">
                         <h3>
@@ -83,7 +83,7 @@
                             <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                           </a>
                         </p>
-                        <p class="price"><b>380₽<span class="weight">/кг</span></b></p>
+                        <p class="catalog-item-price"><b>380₽<span class="weight">/кг</span></b></p>
                         </li>
                         <li class="best-item">
                             <h3>
@@ -96,7 +96,7 @@
                                 <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                               </a>
                             </p>
-                            <p class="price"><b>355₽<span class="weight">/кг</span></b></p>
+                            <p class="catalog-item-price"><b>355₽<span class="weight">/кг</span></b></p>
                             </li>
                             <li class="best-item">
                                 <h3>
@@ -109,8 +109,8 @@
                                     <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                                   </a>
                                 </p>
-                                <p class="price"><b>415₽<span class="weight">/кг</span></b></p>
-                                </li>
+                                <p class="catalog-item-price"><b>415₽<span class="weight">/кг</span></b></p>
+                               </li>
           </ul>
         </section>
         <section class="features">
@@ -136,12 +136,12 @@
               </section>
               <article class="news-blog">
                 <h4>Новое в нашем блоге</h4>
-                <a href="#" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
+                <a href="https://glacy-blog.ru" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
               </article>
               <section class="subscribe">
                 <h4 class="visually-hidden">Подписка</h4>
                 <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
-                  что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+                  что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
                   <!-- Место для формы  -->
                   <button class="btn-subscribe">Отправить</button>
               </section>
@@ -170,10 +170,10 @@
               </div>
                <div class="about-us">
                 <ul>
-                  <li><a href="#"><b>Для поставщиков</b></a></li>
-                  <li><a href="#">О производстве</a></li>
-                  <li><a href="#">Наши документы</a></li>
-                  <li><a href="#">Экологические стандарты</a></li>
+                  <li><a href="for partners.html"><b>Для поставщиков</b></a></li>
+                  <li><a href="production.html">О производстве</a></li>
+                  <li><a href="documents">Наши документы</a></li>
+                  <li><a href="ecological.html">Экологические стандарты</a></li>
                 </ul>
               </div>
               <div class="footer-copyright">
