--- a/catalog.html
+++ b/catalog.html
@@ -233,10 +233,10 @@
               </div>
                <div class="about-us">
                 <ul>
-                  <li><a href="#"><b>Для поставщиков</b></a></li>
-                  <li><a href="#">О производстве</a></li>
-                  <li><a href="#">Наши документы</a></li>
-                  <li><a href="#">Экологические стандарты</a></li>
+                    <li><a href="for partners.html"><b>Для поставщиков</b></a></li>
+                    <li><a href="production.html">О производстве</a></li>
+                    <li><a href="documents">Наши документы</a></li>
+                    <li><a href="ecological.html">Экологические стандарты</a></li>
                 </ul>
               </div>
               <div class="footer-copyright">
