--- a/catalog.html
+++ b/catalog.html
@@ -5,31 +5,31 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
-        </a>
-        <ul class="site-navigation">
-          <li class="site-navigation-current"><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li class="login-link">Вход</li>
-        </ul>
-        <div class="search-link">
-          <a href="#">Поиск</a>
-        </div>
-        <div class="basket-link">
-          <a href="#">Пусто</a>
-        </div>
-      </nav>
-      <section class="phone">
-        <p class="work-time">С 10 до 20, ежедневно</p>
-        <p class="phone-number">8 812 450-25-25</p>
-      </section>
-    </header>
+      <header class="main-header">
+          <nav class="main-navigation">
+            <a class="main-header-logo">
+              <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
+            </a>
+            <ul class="site-navigation">
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="payment.html">Доставка и оплата</a></li>
+              <li><a href="about-company.html">О Компании</a></li>
+            </ul>
+            <ul class="user-navigation">
+              <li class="login-link">Вход</li>
+            </ul>
+            <div class="search-btn">
+              <button>Поиск</button>
+            </div>
+            <div class="basket-btn">
+              <button>Пусто</button>
+            </div>
+          </nav>
+          <div class="phone">
+            <p class="work-time">С 10 до 20, ежедневно</p>
+            <p class="phone-number">8 812 450-25-25</p>
+          </div>
+        </header>
     <main class="container">
         <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
@@ -78,7 +78,7 @@
                       <li class="catalog-item">
                           <h3>
                             <a href="catalog.html">
-                              <p class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</p>
+                              <span class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</span>
                             </a>
                           </h3>
                           <p class="catalog-item-image">
@@ -91,7 +91,7 @@
                           <li class="catalog-item">
                               <h3>
                                 <a href="catalog.html">
-                                  <p class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</p>
+                                  <span class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</span>
                                 </a>
                               </h3>
                               <p class="catalog-item-image">
@@ -133,7 +133,7 @@
                           <li class="catalog-item">
                               <h3>
                                 <a href="catalog.html">
-                                  <p class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</p>
+                                  <span class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</span>
                                 </a>
                               </h3>
                               <p class="catalog-item-image">
@@ -146,7 +146,7 @@
                               <li class="catalog-item">
                                   <h3>
                                     <a href="catalog.html">
-                                      <p class="catalog-item-title">Сливочное с шоколадной стружкой</p>
+                                      <span class="catalog-item-title">Сливочное с шоколадной стружкой</span>
                                     </a>
                                   </h3>
                                   <p class="catalog-item-image">
@@ -188,7 +188,7 @@
                           <li class="catalog-item">
                               <h3>
                                 <a href="catalog.html">
-                                  <p class="catalog-item-title">Сливочное с кусочками черного шоколада</p>
+                                  <span class="catalog-item-title">Сливочное с кусочками черного шоколада</span>
                                 </a>
                               </h3>
                               <p class="catalog-item-image">
@@ -201,7 +201,7 @@
                               <li class="catalog-item">
                                   <h3>
                                     <a href="catalog.html">
-                                      <p class="catalog-item-title">Сливочное с мятным сиропом</p>
+                                      <span class="catalog-item-title">Сливочное с мятным сиропом</span>
                                     </a>
                                   </h3>
                                   <p class="catalog-item-image">
@@ -233,7 +233,7 @@
               </div>
                <div class="about-us">
                 <ul>
-                    <li><a href="for partners.html"><b>Для поставщиков</b></a></li>
+                    <li><a href="for-partners.html"><b>Для поставщиков</b></a></li>
                     <li><a href="production.html">О производстве</a></li>
                     <li><a href="documents">Наши документы</a></li>
                     <li><a href="ecological.html">Экологические стандарты</a></li>
