--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </a>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="shipping and payment.html">Доставка и оплата</a></li>
-          <li><a href="about company.html">О Компании</a></li>
+          <li><a href="payment.html">Доставка и оплата</a></li>
+          <li><a href="about-company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
           <li class="login-link">Вход</li>
@@ -25,14 +25,15 @@
           <button>Пусто</button>
         </div>
       </nav>
-      <section class="phone">
+      <div class="phone">
         <p class="work-time">С 10 до 20, ежедневно</p>
         <p class="phone-number">8 812 450-25-25</p>
-      </section>
+      </div>
     </header>
     <main class="container">
-        <h1 class="visually-hidden">Магазин мороженного «Глейси»</h1>
+    <h1 class="visually-hidden">Магазин мороженного «Глейси»</h1>
         <section class="slider">
+            <h2 class="visually-hidden">Предложение</h2>
             <div class="slide-offer">
               <p>Крем-брюле и пломбир с малиновым джемом</p>
               <p><img src="http://placehold.it/367x582" width="367" height="582" alt="Мороженное крем-брюле">
@@ -88,7 +89,7 @@
                         <li class="best-item">
                             <h3>
                               <a href="catalog.html">
-                                <p class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</p>
+                                <span class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</span>
                               </a>
                             </h3>
                             <p class="catalog-item-image">
@@ -101,7 +102,7 @@
                             <li class="best-item">
                                 <h3>
                                   <a href="catalog.html">
-                                    <p class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</p>
+                                    <span class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</span>
                                   </a>
                                 </h3>
                                 <p class="catalog-item-image">
@@ -146,13 +147,14 @@
                   <button class="btn-subscribe">Отправить</button>
               </section>
               <section class="contacts">
+              <h4 class="visually-hidden">Где нас найти?</h4>
                 <p class="map">
                   <img src="http://placehold.it/1200x430" width="1200" height="430" alt="Карта">
                 </p>
                 <section class="contacts-info">
                   <h4 class="visually-hidden">Контакты</h4>
                   <p class="description">Адрес главного офиса и офлайн-магазина:</p>
-                    <p class="contacts">ул. Большая Конюшенная 19/8, Санкт-Петербург</p></p>
+                    <p class="contacts">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
                   <p class="description">Для заказов по телефону:</p>
                   <p class="contacts">8 812 450-25-25</p>
                   <p class="description">(с 10 до 20 ежедневно)</p>
@@ -170,7 +172,7 @@
               </div>
                <div class="about-us">
                 <ul>
-                  <li><a href="for partners.html"><b>Для поставщиков</b></a></li>
+                  <li><a href="for-partners.html"><b>Для поставщиков</b></a></li>
                   <li><a href="production.html">О производстве</a></li>
                   <li><a href="documents">Наши документы</a></li>
                   <li><a href="ecological.html">Экологические стандарты</a></li>
