--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
       <header class="main-header">
           <nav class="main-navigation">
-            <a class="main-header-logo">
+            <a class="main-header-logo" href="index.html">
               <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
             </a>
             <ul class="site-navigation">
