Размечены попапы в каталоге
Так же сделана базовая разметка форм.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                     <li><a href="catalog.html">Каталог</a></li>
                     <!-- Попап навигации -->
                     <ul class="site-navigation-popup">
-                        <li class="new-item">Новинки</li>
-                        <li>Сливочное</li>
-                        <li>Щербеты</li>
-                        <li>Фруктовый лед</li>
-                        <li>Мелонин</li>
+                        <li class="new-item"><a href="#">Новинки</a></li>
+                        <li><a href="#">Сливочное</a></li>
+                        <li><a href="#">Щербеты</a></li>
+                        <li><a href="#">Фруктовый лед</a></li>
+                        <li><a href="#">Мелонин</a></li>
                     </ul>
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
@@ -41,7 +41,7 @@
             </nav>
             <div class="phone">
                 <p class="work-time">С 10 до 20, ежедневно</p>
-                <p class="phone-number">8 812 450-25-25</p>
+                <a class="phone-number" href="tel:8xxxyyyxxyy">8 812 450-25-25</a>
             </div>
         </header>
         <main class="container">
@@ -54,7 +54,7 @@
                     <p>Крем-брюле и пломбир с малиновым джемом</p>
                     <!-- предпологаемое место для переключателей слайдера, подписи для стилизации -->
                     <label class="slide-offer-switch" for="btn1"></label>
-                    <input type="radio" name="slide-offer-switch" id="btn1">
+                    <input type="radio" name="slide-offer-switch" id="btn1" checked>
                     <label class="slide-offer-switch"for="btn2" ></label>
                     <input type="radio" name="slide-offer-switch" id="btn2">
                     <label class="slide-offer-switch" for="btn3"></label>
